local/logs/project.log
2019-03-12T08:06:48.132Z - normal: Load ~/.CocosCreator/settings.json
2019-03-12T08:06:49.265Z - normal: Initializing Asset Database
2019-03-12T08:06:49.265Z - normal: checking language setting...
2019-03-12T08:06:49.265Z - normal: Language: en
2019-03-12T08:06:49.873Z - success: preview server running at http://localhost:7456
2019-03-12T08:06:49.873Z - success: protocol editor-framework registered
2019-03-12T08:06:49.873Z - success: protocol app registered
2019-03-12T08:06:49.873Z - success: protocol theme registered
2019-03-12T08:06:49.873Z - success: protocol packages registered
2019-03-12T08:06:49.873Z - success: protocol uuid registerred
2019-03-12T08:06:49.873Z - success: protocol db registerred
2019-03-12T08:06:49.873Z - success: protocol thumbnail registerred
2019-03-12T08:06:49.873Z - success: protocol unpack registerred
2019-03-12T08:06:49.873Z - success: protocol disable-commonjs registerred
2019-03-12T08:06:49.981Z - normal: connected!
2019-03-12T08:06:49.981Z - normal: Check project C:\Users\Administrator\Desktop\project_base\complete_project\complete_project
2019-03-12T08:06:49.981Z - normal: Initializing project C:\Users\Administrator\Desktop\project_base\complete_project\complete_project
2019-03-12T08:06:50.518Z - normal: Initializing Cocos2d
2019-03-12T08:06:51.165Z - normal: Initializing engine extends
2019-03-12T08:06:51.196Z - success: asset-db-debugger loaded
2019-03-12T08:06:51.196Z - success: code-editor loaded
2019-03-12T08:06:51.196Z - success: color-picker loaded
2019-03-12T08:06:51.312Z - success: fb-audience-network loaded
2019-03-12T08:06:51.359Z - success: fb-live-stream loaded
2019-03-12T08:06:51.362Z - success: google-play-instant loaded
2019-03-12T08:06:51.366Z - success: huawei-runtime loaded
2019-03-12T08:06:51.367Z - success: jsb-adapter loaded
2019-03-12T08:06:51.370Z - success: oppo-runtime loaded
2019-03-12T08:06:51.373Z - success: package-manager loaded
2019-03-12T08:06:51.480Z - success: qqplay-adapter loaded
2019-03-12T08:06:51.480Z - success: runtime-dev-tools loaded
2019-03-12T08:06:51.480Z - success: sdkbox loaded
2019-03-12T08:06:51.480Z - success: tester loaded
2019-03-12T08:06:51.480Z - success: ui-grid loaded
2019-03-12T08:06:51.495Z - success: ui-kit-preview-extra loaded
2019-03-12T08:06:51.495Z - success: ui-kit-preview loaded
2019-03-12T08:06:51.495Z - success: ui-kit loaded
2019-03-12T08:06:51.495Z - success: ui-tree loaded
2019-03-12T08:06:51.495Z - success: vivo-runtime loaded
2019-03-12T08:06:51.495Z - success: weapp-adapter loaded
2019-03-12T08:06:51.542Z - success: assets loaded
2019-03-12T08:06:51.542Z - success: builder loaded
2019-03-12T08:06:51.765Z - success: cocos-services loaded
2019-03-12T08:06:51.765Z - success: console loaded
2019-03-12T08:06:51.796Z - success: fb-instant-games loaded
2019-03-12T08:06:51.796Z - success: google-instant-games loaded
2019-03-12T08:06:51.796Z - success: hierarchy loaded
2019-03-12T08:06:51.796Z - success: inspector loaded
2019-03-12T08:06:51.796Z - success: keystore loaded
2019-03-12T08:06:51.796Z - success: node-library loaded
2019-03-12T08:06:51.796Z - success: package-asset loaded
2019-03-12T08:06:51.796Z - success: preferences loaded
2019-03-12T08:06:51.812Z - success: project-exporter loaded
2019-03-12T08:06:51.812Z - success: project-importer loaded
2019-03-12T08:06:51.812Z - success: project-settings loaded
2019-03-12T08:06:51.812Z - success: scene loaded
2019-03-12T08:06:51.812Z - success: simulator-debugger loaded
2019-03-12T08:06:51.812Z - success: sprite-editor loaded
2019-03-12T08:06:51.812Z - success: store loaded
2019-03-12T08:06:51.812Z - success: timeline loaded
2019-03-12T08:06:52.839Z - normal: Loading packages
2019-03-12T08:06:52.839Z - normal: Watching packages
2019-03-12T08:06:53.136Z - normal: Run Application
2019-03-12T08:06:53.424Z - info: Cocos Services load base data!
2019-03-12T08:24:41.708Z - failed: [db-task][sync-changes] Failed to import asset C:\Users\Administrator\Desktop\project_base\complete_project\complete_project\assets\scripts\BlueWater.js, message: Compile error: SyntaxError: C:/Users/Administrator/Desktop/project_base/complete_project/complete_project/assets/scripts/BlueWater.js: Unexpected token, expected , (192:8)
  190 |             }
  191 |         }
> 192 |         return false;
      |         ^
  193 |     },
  194 | 
  195 |  
    at Parser.pp$5.raise (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp.expect (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1749:33)
    at Parser.pp$3.parseObj (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3978:12)
    at Parser.pp$3.parseExprAtom (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3719:19)
    at Parser.pp$3.parseExprSubscripts (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3474:19)
    at Parser.pp$3.parseExprOps (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3344:19)
2019-03-12T08:28:15.827Z - failed: [db-task][sync-changes] Failed to import asset C:\Users\Administrator\Desktop\project_base\complete_project\complete_project\assets\scripts\BlueWater.js, message: Compile error: SyntaxError: C:/Users/Administrator/Desktop/project_base/complete_project/complete_project/assets/scripts/BlueWater.js: Unexpected token, expected , (184:8)
  182 |             }
  183 |         }
> 184 |         return false;
      |         ^
  185 |     },
  186 | 
  187 |  
    at Parser.pp$5.raise (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp.expect (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1749:33)
    at Parser.pp$3.parseObj (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3978:12)
    at Parser.pp$3.parseExprAtom (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3719:19)
    at Parser.pp$3.parseExprSubscripts (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3474:19)
    at Parser.pp$3.parseExprOps (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3344:19)
